# AdventOfCode2024

./: .gitignore  CMakeLists.txt  CMakePresets.json  main.cpp
inc/: day01.h  day02.h  day03.h  day04.h  util.h
script/: gen.py
script/templates/: header.txt  source.txt
src/: CMakeLists.txt  day01.cpp  day02.cpp  day03.cpp  day04.cpp
